# qbf-rust

./: Cargo.toml  README.md  introduce.rs  main.rs  parser.rs  problem.rs  solver.rs  substitute.rs
src/: builder.rs  cnf.rs  dot.rs  expand_solve.rs  expansion.rs  introduce.rs  lib.rs  main.rs  n_expression.rs  parser.rs  printout.rs  problem.rs  rc_expression.rs  rc_substitute.rs  sat.rs  simplify.rs  solve.rs  substitute.rs  vars.rs
src/tests/: introduce.rs  problem.rs
