[package]
name = "qbf"
version = "0.1.0"
authors = ["Daniel Waterworth <da.waterworth@gmail.com>"]

[dependencies]
nom = "^1.2.3"
bit-vec = "^0.4.3"
picorust = {git = "https://github.com/DanielWaterworth/picorust.git"}

[[bin]]
name = "qbf"
path = "src/main.rs"

[lib]
name = "qbf"
path = "src/lib.rs"
